Fix database import from Amarok 1.4 for Postgres.

Patch by Anderson <amg1127@cefetrs.tche.br>. Please test :)

@Seb: Do you think the patch is OK?

BUG: 209175